css/style.css
html {
    font-size: 16px;
}

/* Body 
-------------------------- */
body {
    position: relative;
    overflow-x: hidden;
    margin: 0;
    padding: 0;
    height: 100%;
    background-color: #FFFFFF;
    font-family: 'Josefin Sans', sans-serif;
    font-weight: 400;
}

main {
    height: 100vh;
    width: 100%;
}

/* Header 
-------------------------- */
.navbar {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    padding-top: 0;
    padding-bottom: 0;
    height: 5rem;
}
@media screen and (min-width: 1200px) {
    .navbar {
        height: 8rem;
    }
}

/* Navbar : btn burger */
.btn-burger {
    width: 20px;
    height: 35px;
    border: none;
    position: relative;
    padding: 0;
    background-color: transparent;
}

.btn-burger .line {
    width: 100%;
    height: 3px;
    background-color: #1d1d1c;
    border-radius: 9999px;
}

.btn-burger .line::before {
    content: '';
    position: absolute;
    top: 10px;
    left: 0;
    width: 100%;
    height: 3px;
    background-color: #1d1d1c;
    border-radius: 9999px;
}
.btn-burger .line::after {
    content: '';
    position: absolute;
    bottom: 10px;
    left: 0;
    width: 75%;
    height: 3px;
    background-color: #1d1d1c;
    border-radius: 9999px;
}

/* Navbar : links */
.navbar .nav-links {
    list-style: none;
    margin: 0;
}

.nav-item {
    display: block;
    padding: 0 1rem 0 0;
}

.nav-item a {
    position: relative;
    text-decoration: none;
    text-transform: uppercase;
    height: 100%;
    cursor: pointer;
}

.nav-item a::after {
    content: '';
    position: absolute;
    bottom: 40px;
    left: 0;
    width: 0;
    height: 3px;
    border-radius: 50rem;
    background-color: #1d1d1c;
    transition: width 0.5s ease-in-out;
}

.nav-item .link-item:hover::after {
    width: 100%;
    transition: width 0.4s ease-in-out;
}
.nav-item .link-item:hover {
    color: #1d1d1c;
}

/* Navbar : submenu animation */
.nav-item .link-item:hover + .submenu-shop {
    display: flex;
    animation: submenu-scale 500ms forwards;
    transform-origin: top left;
}

.nav-item .link-item + .submenu-shop:hover {
    display: flex;
    clip-path: none;
}

@keyframes submenu-scale {
    0% {
        transform: scaleY(0);
        clip-path: polygon(100% 0, 100% 0, 0 100%, 0 0);
    }
    100% {
        transform: scaleY(1);
        clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
    }
} 

/* Navbar : submenu shop */
.submenu-shop {
    position: absolute;
    top: 128px;
    left: 0;
    width: 100%;
    display: none;
    background: rgba( 129, 129, 129, 0.10 );
    backdrop-filter: blur( 9.0px );
    -webkit-backdrop-filter: blur( 9.0px );
    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 0);
    padding: 0;
    
}

.submenu-list {
    list-style: none;
    width: 12rem;
    padding-left: 0;
}
.submenu-title {
    font-family: "DINCondensed-DemiBold";
    font-size: 1.5rem;
    text-transform: uppercase;
    margin: 0;
}
.submenu-link {
    font-weight: 300;
    text-transform: uppercase;
}
.submenu-link:hover {
    color: #1d1d1c;
    font-weight: 400;
}

.submenu-item {
    opacity: 0;
    visibility: hidden;
    transform: translateY(-20px);
}

/* Navbar : submenu -> slider */
.slider-collection {
    opacity: 0;
    visibility: hidden;
    width: 100%;
    height: 300px;
}

.carousel-indicators {
    left: -12px;
    margin-left: 0;
}

/* Navbar : menu right */
.btn-nav-spacepro {
    border: none;
    text-transform: uppercase;
    font-weight: 300;
    box-shadow: 0px 8px 50px 1px rgba(0,0,0,0.42);
}
.btn-nav-spacepro:hover {
    background-color: #dd1a1e;
}

.nav-link-signup {
    position: relative;
    text-decoration: none;
}
.nav-link-signup::after {
    content: '';
    position: absolute;
    bottom: -4px;
    left: 0;
    width: 0;
    height: 3px;
    border-radius: 50rem;
    background-color: #1d1d1c;
    transition: width 0.5s ease-in-out;
}
.nav-link-signup:hover::after {
    width: 100%;
    transition: width 0.4s ease-in-out;
}
.nav-link-signup:hover {
    color: #1d1d1c;
}

.nav-link-icon {
    width: 2rem;
    height: 2rem;
}
.icon-search {
    position: absolute;
    top: 5px;
    left: 0;
    width: 25px;
}

.icon-caddie {
    position: absolute;
    top: -2px;
    left: 0;
    width: 40px;
}
/* Navbar : icon shopping cart -> number */
.number-shop {
    position: absolute;
    top: 8px;
    left: 15px;
    font-size: 0.8rem;
}

/* Navbar : dropdown lang */
.dropdown-lang {
    position: absolute;
    top: 25px;
    left: 193px;
}
.dropdown-lang a {
    font-size: 1rem;
    border-bottom: 2px solid gray;
    text-decoration: none;

}

/* Header => END
-------------------------- */

/* Menu mobile 
-------------------------- */
.menu-mobile {
    position: absolute;
    top: 0;
    left: -90%;
    width: 90%;
    min-height: 25rem;
    transition: left 0.3s ease-in-out;
    background: rgba( 21, 145, 159, 0.65 );
    backdrop-filter: blur( 12.5px );
    -webkit-backdrop-filter: blur( 12.5px );
}

.menu-mobile.menu-opened {
    position: fixed;
    left: 0;
}

/* Menu mobile : btn close */
.menu-mobile-close {
    width: 100%;
    height: 5rem;
}

.btn-mobile-close {
    position: relative;
    border: none;
    background-color: transparent;
    width: 1.3rem;
    height: 1.3rem;
    padding: 0;
    opacity: 0;
    visibility: hidden;
}

.close-icon {
    overflow: hidden;
    position: absolute;
    left: 0;
    top: 0;
    cursor: pointer;
    width: 1.3rem;
    height: 1.3rem;
    font-size: 0;
    opacity: 0;
}

.close-icon::before, .close-icon::after {
    position: absolute;
    content: '';
    top: 50%;
    left: 0;
    width: 100%;
    height: .16rem;
    background-color: white;
}

.close-icon::before {
    transform: rotate(45deg);
}

.close-icon::after {
    transform: rotate(-45deg);
}

.close-icon.menu-opened {
    opacity: 1;
    transition: opacity 1.2s cubic-bezier(.4, 0, .2, 1);
} 

/* Menu mobile : Panels list */
.panels {
    position: relative;
    min-height: 25rem;
}

.panel-list-1 .panel-item {
    opacity: 0;
    visibility: hidden;
}

.panel {
    position: absolute;
    overflow-y: auto;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    padding-left: 3rem;
    padding-right: 3rem;
}

.panel-title {
    text-transform: uppercase;
    padding: 0;
    font-family: "DINCondensed-DemiBold";
    padding-top: 1.5rem;
    padding-bottom: 1rem;
    font-size: 1.6rem;
    font-weight: 400;
    letter-spacing: 0.1rem;
}

.panel-list {
    list-style: none;
    padding: 0;
    margin: 0;
}

.panel-link {
    text-decoration: none;
    font-size: 1rem;
    height: 1rem;
}

.panel-next {
    cursor: pointer;
}

.panel-link:hover {
    color: #1d1d1c;
}

.panel-link-icon {
    height: 1rem;
}

.panel-br {
    width: 0;
    height: 2px;
    opacity: 0;
    visibility: hidden;
}

.btn-mobile-spacepro {
    text-transform: uppercase;
    font-weight: 300;
}

.btn-mobile-connect {
    text-decoration: none;
    font-size: 1.2rem;
    border: none;
    background-color: transparent;
}

.btn-mobile-dropdown {
    border: none;
    /* position: absolute; */
    bottom: 0;
    left: 3rem;
    width: 13rem;
    height: 3rem;
    padding: 0;
    font-size: 1.2rem;
    background: rgba(198, 229, 231, 0.25);
    backdrop-filter: blur( 12.0px );
    -webkit-backdrop-filter: blur( 12.0px );
}

.txt-lang-dropdown {
    font-size: 1.2rem;
}

.panel-back {
    cursor: pointer;
    height: 3.5rem;
    position: relative;
    border-bottom: 2px solid white;
    padding-bottom: 1rem;
}

.panel-back-icon {
    height: 1.2rem;
}

.panel-back-txt {
    position: absolute;
    top: 9px;
    left: 40px;
    font-size: 1.2rem;
}

/* Menu mobile : Panels animation switch */
.panel.panel-opened  {
    visibility: visible;
    transform: translateX(0);
    transition: visibility 0.2s ease;
}
.panel.panel-closed  {
    visibility: hidden;
    transform: translateX(-100%);
    transition: visibility 0.2s ease;
}

.panel.start-left {
    animation: start-left 0.4s cubic-bezier(0.79, 0.02, 0.67, 1.01) forwards;
}
.panel.left-start {
    animation: left-start 0.4s cubic-bezier(0.79, 0.02, 0.67, 1.01) forwards;
}
.panel.right-start {
    animation: right-start 0.4s cubic-bezier(0.79, 0.02, 0.67, 1.01) forwards;
}
.panel.start-right {
    animation: start-right 0.4s cubic-bezier(0.79, 0.02, 0.67, 1.01) forwards;
}

@keyframes start-left {
    0% {
        transform: translateX(0);
        opacity: 1;
    }
    100% {
        transform: translateX(-100%);
        opacity: 0;
    }
}

@keyframes left-start {
    0% {
        transform: translateX(-100%);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes right-start {
    0% {
        transform: translateX(100%);
        opacity: 0;
    }
    100% {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes start-right {
    0% {
        transform: translateX(0);
        opacity: 1;
    }
    100% {
        transform: translateX(100%);
        opacity: 0;
    }
}
/* Menu mobile END
-------------------------- */

/* Sidebar 
-------------------------- */
.sidebar {
    position: fixed;
    overflow-y: auto;
    opacity: 0;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    transform: translateX(100%);
    background: rgba( 255, 255, 255, 0.30 );
    backdrop-filter: blur( 10.5px );
    -webkit-backdrop-filter: blur( 10.5px );
}

@media screen and (min-width: 1200px) {
    .sidebar {
        width: 35%;
    }
}

.sidebar.sidebar-opened {
    transform: translateX(0);
}

/* Sidebar => connexion btn close */
.sidebar-close {
    height: 6rem;
}

.btn-sidebar-close {
    position: relative;
    width: 1.5rem;
    height: 1.5rem;
    cursor: pointer;
}

.btn-sidebar-close::before, .btn-sidebar-close::after {
    position: absolute;
    content: '';
    top: 50%;
    left: 0;
    width: 100%;
    height: .16rem;
    background-color: #1d1d1c;
}

.btn-sidebar-close::before {
    transform: rotate(45deg);
}

.btn-sidebar-close::after {
    transform: rotate(-45deg);
}

/* Sidebar => connexion content */
.title-signin {
    font-family: "DINCondensed-DemiBold";
    font-size: 1.5rem;
    letter-spacing: 0.1rem;
}

.title-signin a {
    text-decoration: none;
}

.sidebar-signin h1 {
    font-size: 2.3rem;
}

.title-signin a:hover {
    color: #1d1d1c;
}

.form-sidebar .input-custom {
    width: 100%;
    height: 3rem;
    border: none;
    background-color: #ffffff;
    border-radius: none;
    padding-left: 1rem;
}

.btn-custom {
    font-family: "DINCondensed-DemiBold";
    font-size: 1rem;
    letter-spacing: 0.2rem;
}

.btn-custom-full {
    border: none;
}

.btn-custom-border {
    border: none;
    border: 2px solid #1d1d1c;
}

.lineBreak {
    width: 100%;
    height: 0.5rem;
    border-radius: 9999px;
}

/* Sidebar => search content */
.sidebar-search {
    width: 2rem;
    height: 2rem;
}

.sidebar-search-icon {
    width: 100%;
}

/* Sidebar => cart content */
.cart-end {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: auto;
}

.cart-total {
    font-family: "DINCondensed-DemiBold";
    font-size: 1.2rem;
}

